src/objects/Product_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <summarizedField>Product_Period__c.Period_Date__c</summarizedField>
        <summaryForeignKey>Product_Period__c.Product_Revenue__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Revenues</relationshipLabel>
        <relationshipName>Product_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opty_Product_ID__c</fullName>
        <label>Opty Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opty_Product_Name__c</fullName>
        <label>Opty Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Platform</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <description>Used for the Line ID</description>
        <externalId>true</externalId>
        <label>Product ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Revenue_Group__c</fullName>
        <label>Revenue Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Revenue_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <summarizedField>Product_Period__c.Period_Date__c</summarizedField>
        <summaryForeignKey>Product_Period__c.Product_Revenue__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Product_Period__c.Amount__c</summarizedField>
        <summaryForeignKey>Product_Period__c.Product_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invalid_Project_Amt__c</fullName>
        <label>Total Invalid Project Amt</label>
        <summarizedField>Product_Period__c.Invalid_Project_Amount__c</summarizedField>
        <summaryForeignKey>Product_Period__c.Product_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Valid_Project_Amt__c</fullName>
        <label>Total Valid Project Amt</label>
        <summarizedField>Product_Period__c.Valid_Project_Amount__c</summarizedField>
        <summaryForeignKey>Product_Period__c.Product_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Product Revenue</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Product Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Revenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>